# llm-in-game-tech-demo

./: CMakeLists.txt
include/: InputManager.h  Renderer.h  Shader.h  Window.h
resources/: shader.frag  shader.vert
src/: InputManager.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
